--- a/public/markdown-syntax-guide/index.html
+++ b/public/markdown-syntax-guide/index.html
@@ -324,7 +324,7 @@
             </div>
             <div class="nav-next">
                 
-                <a class="next" href="https://swiswiswift.com/tableview%E3%81%AE%E3%82%BB%E3%83%AB%E3%81%AE%E9%AB%98%E3%81%95%E3%82%92%E5%A4%89%E6%9B%B4%E3%81%99%E3%82%8Bswift5.0.1/"> TableViewのセルの高さを変更する（Swift5.0.1）</a>
+                <a class="next" href="https://swiswiswift.com/2019-03-15/"> Java で文字列をシャッフルする</a>
                 
             </div>
         </div>
@@ -345,9 +345,9 @@
     <aside class="widget widget_categories">
         <h2>Categories</h2>
         <ul class="widget__list"><li class="cat-item cat-item-2">
-                <a href="/categories/syntax">syntax (5)</a>
+                <a href="/categories/syntax">syntax (18)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="/categories/themes">themes (5)</a>
+                <a href="/categories/themes">themes (18)</a>
             </li>
         </ul>
     </aside>
@@ -362,7 +362,7 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
-                <a href="/gem-%E3%81%A7%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E3%81%97%E3%81%9F-cocoapods-%E3%82%92%E3%82%A2%E3%83%83%E3%83%97%E3%83%87%E3%83%BC%E3%83%88/">gem でインストールした cocoapods をアップデート</a>
+                <a href="/2019-09-12/">gem でインストールした cocoapods をアップデートする</a>
             </li>
             <li>
                 <a href="/iosdc-japan-2019%E3%81%AEday1%E3%81%AB%E3%81%8A%E3%81%84%E3%81%A6%E3%83%AB%E3%83%BC%E3%82%AD%E3%83%BC%E3%82%BAlt%E6%9E%A0%E3%81%A7%E7%99%BB%E5%A3%87%E3%81%95%E3%81%9B%E3%81%A6%E3%81%84%E3%81%9F%E3%81%A0%E3%81%8D%E3%81%BE%E3%81%97%E3%81%9F/">iOSDC Japan 2019のDay1において、ルーキーズLT枠で登壇させていただきました</a>
@@ -371,29 +371,32 @@
                 <a href="/tableview%E3%81%AE%E3%82%BB%E3%83%AB%E3%81%AE%E9%AB%98%E3%81%95%E3%82%92%E5%A4%89%E6%9B%B4%E3%81%99%E3%82%8Bswift5.0.1/">TableViewのセルの高さを変更する（Swift5.0.1）</a>
             </li>
             <li>
-                <a href="/markdown-syntax-guide/">Markdown Syntax Guide</a>
+                <a href="/2019-07-29/">ビズリーチキャンパスでアカウントがロックされた時の解除方法</a>
             </li>
             <li>
-                <a href="/rich-content/">Rich Content</a>
+                <a href="/2019-06-03/">UIButton、ボタンを表示する(Swift5.0)</a>
             </li>
             <li>
-                <a href="/placeholder-text/">Placeholder Text</a>
+                <a href="/2019-06-02/">一定間隔の値をUISlider で取得する(Swift5.0)</a>
             </li>
             <li>
-                <a href="/math-typesetting/">Math Typesetting</a>
+                <a href="/2019-06-01/">UISlider で値を取得する(Swift5.0)</a>
             </li>
             <li>
-                <a href="/emoji-support/">Emoji Support</a>
+                <a href="/2019-05-12/">CallKit を使って着信画面を表示する</a>
             </li>
             <li>
-                <a href="/%E3%82%B5%E3%82%A4%E3%83%88%E3%83%AA%E3%83%8B%E3%83%A5%E3%83%BC%E3%82%A2%E3%83%AB%E3%81%97%E3%81%BE%E3%81%97%E3%81%9F/">サイトリニューアルしました</a>
+                <a href="/2019-04-12/">ログイン時にメッセージを表示する（CentOS7）</a>
+            </li>
+            <li>
+                <a href="/2019-04-11/">iOSでUITest（E2Eテスト）を行う(Swift5.0)</a>
             </li>
         </ul>
     </aside>
 
     <aside class="widget widget_archive">
         <h2>Archives</h2>
-        <ul><li><a href="/archives/2019/03">2019/03 (4)</a></li><li><a href="/archives/2019/09">2019/09 (4)</a></li>
+        <ul><li><a href="/archives/2019/03">2019/03 (4)</a></li><li><a href="/archives/2019/09">2019/09 (17)</a></li>
         </ul>
     </aside>
 
