--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://swiswiswift.com/about/</title><link rel="canonical" href="https://swiswiswift.com/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://swiswiswift.com/about/" /></head></html>
+<!DOCTYPE html><html><head><title>https://swiswiswift.com/privacy/</title><link rel="canonical" href="https://swiswiswift.com/privacy/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://swiswiswift.com/privacy/" /></head></html>
